--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,11 @@ services:
     ports:
       - '8080:8080'
     volumes:
-      - ./jenkins-jobs:/var/jenkins_home/jobs
-      - ./docker-images:/var/jenkins_home/docker-images
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./jenkins-jobs:/var/jenkins_home/jobs #Persistent storage for Jobs
+      - ./docker-images:/var/jenkins_home/docker-images #This path is referenced in the jenkins job to build web docker images
+      - /var/run/docker.sock:/var/run/docker.sock #Mounting local docker daemon socket into Jenkins so it can utilize host's Docker engine
+  
   weissbeerger-web:
-    image: weissbeerger-web:v1
+    image: weissbeerger-web:v1 #A reference to a docker image which should be built by Jenkins first
     ports:
       - '80:80'
